Смена цвета названия фильма в темной теме

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,59 +1,72 @@
 // Создано для демонстрации удалить
 .box {
-    //background-color: black;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  //background-color: black;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.dark-theme{
+.dark-theme {
   background-color: #000;
+
+  #item-dt {
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(252, 252, 252, 0.12), 0px 4px 4px rgba(252, 250, 250, 0.06),
+        1px 4px 6px rgba(255, 255, 255, 0.16);
+      cursor: pointer;
+      transform: scale(1.1);
+      border-radius: 2px;
+    }
+  }
+
+  #video-title-dt {
+    color: #fff;
+  }
 }
 
 // конец
 
-  .button-orange {
-    @extend %button;
-    color: #fff;
-    background-color: #FF6B01;
-    border: 1px solid #FF6B01;
-  
-    &:hover,
-    &:focus {
-      background-color: transparent;
-      color: #fff;
-      border: 1px solid #fff;
-    }
-  }
+.button-orange {
+  @extend %button;
+  color: #fff;
+  background-color: #ff6b01;
+  border: 1px solid #ff6b01;
 
-  .button-white {
-    @extend %button;
-    color: var(--main-white-color);
+  &:hover,
+  &:focus {
     background-color: transparent;
-    border: 1px solid var(--main-white-color);
- 
-    &:hover,
-    &:focus {
-      background-color: var(--background-accent);
-      border: 1px solid var(--background-accent);  
-      }
+    color: #fff;
+    border: 1px solid #fff;
+  }
 }
 
-  .button-active { 
-    @extend %button;  
-    -webkit-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
-    -moz-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
-     box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
-     transition: -webkit-box-shadow 250ms var(--animation-timing-function);
-  
-      &:hover,
-      &:focus {
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-      transition: -webkit-box-shadow 250ms var(--animation-timing-function);    
-      }
-    }
+.button-white {
+  @extend %button;
+  color: var(--main-white-color);
+  background-color: transparent;
+  border: 1px solid var(--main-white-color);
 
+  &:hover,
+  &:focus {
+    background-color: var(--background-accent);
+    border: 1px solid var(--background-accent);
+  }
+}
 
+.button-active {
+  @extend %button;
+  -webkit-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
+  -moz-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
+  box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
+  transition: -webkit-box-shadow 250ms var(--animation-timing-function);
+
+  &:hover,
+  &:focus {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    transition: -webkit-box-shadow 250ms var(--animation-timing-function);
+  }
+}
