--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-  <li class='item'>
+  <li class='item' id="item-dt">
     <a class='link' href='#' id={{id}}>
       <div class='video-card'>
         <img
@@ -9,7 +9,7 @@
         />
         <span class='video-rating'></span>
       </div>
-      <h2 class='video-title'>{{original_title}} </h2>
+      <h2 class='video-title' id="video-title-dt">{{original_title}} </h2>
       <div>
         <span class="video__details">{{genres}} | {{release_date}}</span>
         <span class="video__vote">{{vote_average}}</span>
