--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-  <li class='item'>
+  <li class='item' id='item-dt'>
     <a class='link' href='#'>
       <div class='video-card'>
         <img
