--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,15 +1,17 @@
 <div class ="pagination container">
     <ul class="pagination_list"> 
-       <!-- <li class="pagination_item btn_pgn"><span><i class="fas fa-arrow-left"></i></i></span></li>
-        <li class="pagination_item numb active"><span>1</span></li>
-        <li class=" dots"><span>...</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class=" dots"><span>...</span></li>
-        <li class="pagination_item numb"><span>1</span></li>
-        <li class="pagination_item btn_pgn"><span><i class="fas fa-arrow-right"></i></i></span></li>-->
     </ul>
 </div>
+
+
+   <!-- <li class="pagination_item btn_pgn"><span><i class="fas fa-arrow-left"></i></i></span></li>
+        <li class="pagination_item numb fist active"><span>1</span></li>
+        <li class=" dots"><span>...</span></li>
+        <li class="pagination_item numb"><span>1</span></li>
+        <li class="pagination_item numb"><span>1</span></li>
+        <li class="pagination_item numb"><span>1</span></li>
+        <li class="pagination_item numb"><span>1</span></li>
+        <li class="pagination_item numb"><span>1</span></li>
+        <li class=" dots"><span>...</span></li>
+        <li class="pagination_item last numb"><span>1</span></li>
+        <li class="pagination_item btn_pgn"><span><i class="fas fa-arrow-right"></i></i></span></li>-->
