--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,10 +3,12 @@
     position: fixed;
     z-index: 6;
     background: $dark-theme-color;
+    width: 100%;
   }
 
   .menu-logo {
     padding: 30px 0 30px 0;
+    width: 100px;
   }
 
   .menu-logo .logo__text {
@@ -121,6 +123,10 @@
     right: 100px;
   }
 
+  .menu-logo {
+    width: 130px;
+  }
+
   .menu-button {
     top: 40px;
     right: 40px;
@@ -128,4 +134,42 @@
 }
 
 @media screen and (min-width: $desktop) {
+  .nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu {
+    display: block;
+  }
+  .navigation {
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+
+    &__item:not(:last-child) {
+      margin-right: 40px;
+      margin-bottom: 0;
+    }
+
+    &__link {
+      font-size: 14px;
+      font-weight: 700;
+      color: $text-color;
+    }
+  }
+
+  .tel-link {
+    padding: 26px 24px;
+    font-size: 14px;
+  }
+
+  .tel-link-wrapper {
+    position: static;
+  }
+
+  .menu-button {
+    display: none;
+  }
 }
