--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,182 +1,94 @@
 <section class="slider">
-	<div class="container">
-		<h2 class="slider-title title">Отзывы выпускников</h2>
-
-		<div class="slid">
-
-			<ul class="slid-list">
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
+  <div class="container">
+		<h2 class="slider__title">Отзывы выпускников</h2>
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+					<div class="slider__item">
+					<div class="slider__image-wrapper">
 
 						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon " width: 54px; height: 54px;>
+
 						<a href="#">
-							<svg class="slide-svg">
+							<svg class="slider__svg">
 								<use href="/images/svg/sprite.svg#vk"></use>
 							</svg>
 						</a>
-					</div>
-					<div class="wrapper-info">
 
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
+					</div>
+
+					<div class="slider__info-wrapper">
+
+						<h3 class="slider__name">Тоня Кучеровская</h3>
+						<p class="slider__info">Выпуск 2015-го года, Національний університет біоресурсів
 							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
+						<p class="slider__text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
 							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
 							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
 							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
+							Зараз я можу похизуватись тим, що я студен ... <a class="slider__link link" href="#">Читать дальше </a> </p>
 					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
+				</div>
+			</div>
+        <div class="swiper-slide">
+					<div class="slider__item">
+					<div class="slider__image-wrapper">
 
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
+						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon " width: 54px; height: 54px;>
 
 						<a href="#">
-							<svg class="slide-svg">
+							<svg class="slider__svg">
 								<use href="/images/svg/sprite.svg#vk"></use>
 							</svg>
 						</a>
-					</div>
-					<div class="wrapper-info">
 
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
+					</div>
+
+					<div class="slider__info-wrapper">
+
+						<h3 class="slider__name">Тоня Кучеровская</h3>
+						<p class="slider__info">Выпуск 2015-го года, Національний університет біоресурсів
 							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
+						<p class="slider__text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
 							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
 							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
 							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
+							Зараз я можу похизуватись тим, що я студен ... <a class="slider__link link" href="#">Читать дальше </a> </p>
 					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
+				</div>
+			</div>
+        <div class="swiper-slide">
+					<div class="slider__item">
+					<div class="slider__image-wrapper">
 
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
+						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon " width: 54px; height: 54px;>
 
 						<a href="#">
-							<svg class="slide-svg">
+							<svg class="slider__svg">
 								<use href="/images/svg/sprite.svg#vk"></use>
 							</svg>
 						</a>
-					</div>
-					<div class="wrapper-info">
 
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
+					</div>
+
+					<div class="slider__info-wrapper">
+
+						<h3 class="slider__name">Тоня Кучеровская</h3>
+						<p class="slider__info">Выпуск 2015-го года, Національний університет біоресурсів
 							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
+						<p class="slider__text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
 							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
 							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
 							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
+							Зараз я можу похизуватись тим, що я студен ... <a class="slider__link link" href="#">Читать дальше </a> </p>
 					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
+				</div>
+				</div>
+      </div>
 
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
-
-						<a href="#">
-							<svg class="slide-svg">
-								<use href="/images/svg/sprite.svg#vk"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="wrapper-info">
-
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
-							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
-							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
-							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
-					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
-
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
-
-						<a href="#">
-							<svg class="slide-svg">
-								<use href="/images/svg/sprite.svg#vk"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="wrapper-info">
-
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
-							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
-							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
-							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
-					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
-
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
-
-						<a href="#">
-							<svg class="slide-svg">
-								<use href="/images/svg/sprite.svg#vk"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="wrapper-info">
-
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
-							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
-							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
-							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
-					</div>
-				</li>
-				<li class="slid-list-item">
-					<div class="wrapper-img-and-social-icon">
-
-						<img class="slider__img" src="/images/slider/icon6.jpg" alt="icon">
-
-						<a href="#">
-							<svg class="slide-svg">
-								<use href="/images/svg/sprite.svg#vk"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="wrapper-info">
-
-						<h3 class="slid-name">Тоня Кучеровская</h3>
-						<p class="info">Выпуск 2015-го года, Національний університет біоресурсів
-							і природокористування України</p>
-						<p class="slide-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
-							зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-							тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала
-							для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-							Зараз я можу похизуватись тим, що я студен ... <a href="#">Читать дальше </a> </p>
-					</div>
-				</li>
-			</ul>
-
-			<ul class="slid-list-small">
-				<li><img src="/images/slider/icon1.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon2.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon3.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon4.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon5.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon6s.jpg" alt="img"></li>
-				<li><img src="/images/slider/icon7.jpg" alt="img"></li>
-			</ul>
-
-		</div>
-	</div>
+      <!-- navigation -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
 </section>
