--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,249 +1,68 @@
-.slider {
-  padding: 50px 0;
-
-  @media screen and (min-width: $desktop) {
-    padding: 130px 0;
-  }
-
-  .slick-list {
-    overflow: hidden;
-  }
-
-  .slid-list .slick-arrow {
-    background-color: $dark-theme-color;
-    border: none;
-    display: none;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    font-size: 0;
-
-    @media screen and (min-width: $tablet) {
-      display: block;
-    }
-  }
-  .slid-list .slick-track {
-    display: flex;
-  }
-
-  .slider-title {
-    text-align: center;
-    font-size: 20px;
-    line-height: 130%;
-
-    @media screen and (min-width: $desktop) {
-      font-size: 46px;
-      line-height: 130%;
-    }
-  }
-
-  .slid-list {
-    @media screen and (min-width: $tablet) {
-      padding: 12px;
-    }
-    @media screen and (min-width: $desktop) {
-      padding: 50px;
-    }
-  }
-  .slid-list-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 0 30px 0;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-
-    @media screen and (min-width: $tablet) {
-      flex-direction: row;
-      justify-content: center;
-      padding: 40px;
-    }
-  }
-  .slid-list-small {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 49px;
-
-    @media screen and (min-width: $tablet) {
-      padding: 0 65px;
-    }
-
-    @media screen and (min-width: $desktop) {
-      padding: 0 378px;
-    }
-  }
-  .slid-list-small li {
-    width: 54px;
-    height: 54px;
-    @media screen and (min-width: $tablet) {
-      &:not(:last-child) {
-        margin-right: 10px;
-      }
-    }
-  }
-
-  .slid-list-small .slick-list {
-    width: 100%;
-  }
-
-  .slid-list-small .slick-slide {
-    width: 54px;
-    height: 54px;
-    border-radius: 50%;
-  }
-
-  .slid-list-small .slick-track {
-    display: flex;
-    position: relative;
-  }
-
-  .slid-list-small .slick-arrow {
-    background-color: $dark-theme-color;
-    border: none;
-
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    font-size: 0;
-
-    @media screen and (min-width: $tablet) {
-      display: none;
-    }
-  }
-
-  .slick-arrow.slick-prev,
-  .slick-arrow.slick-prev:focus {
-    outline: none;
-    left: 0;
-    width: 30px;
-    height: 20px;
-    background-image: url(/images/svg/Arrow1.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @media screen and (min-width: $tablet) {
-      left: 15px;
-    }
-  }
-  .slick-arrow.slick-next,
-  .slick-arrow.slick-next:focus {
-    outline: none;
-    width: 30px;
-    height: 20px;
-    background-image: url(/images/svg/Arrow2.svg);
-    right: 0;
-    background-repeat: no-repeat;
-    background-size: contain;
-    @media screen and (min-width: $tablet) {
-      right: 15px;
-    }
-  }
-
-  .wrapper-img-and-social-icon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    @media screen and (min-width: $tablet) {
-      margin-right: 46px;
-    }
-
-    @media screen and (min-width: $desktop) {
-      margin-right: 40px;
-    }
-  }
-  .wrapper-img-and-social-icon img {
-    width: 90px;
-    height: 90px;
-    margin-bottom: 20px;
-
-    @media screen and (min-width: $tablet) {
-      width: 150px;
-      height: 150px;
-    }
-  }
-
-  .wrapper-img-and-social-icon .slide-svg {
-    width: 30px;
-    height: 30px;
-    margin-bottom: 20px;
-  }
-
-  .slid-name {
-    font-family: $main-font;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: $accent-color;
-    margin-bottom: 10px;
-
-    @media screen and (min-width: $tablet) {
+@media screen and (min-width: $mobile) {
+  .slider {
+    padding: 50px 0;
+    &__title {
+      font-weight: 800;
       font-size: 20px;
-      line-height: 24px;
-      margin-bottom: 20px;
-      text-align: start;
+      text-align: center;
+      margin-bottom: 40px;
     }
 
-    @media screen and (min-width: $desktop) {
-      font-size: 30px;
-      line-height: 37px;
+    &__image-wrapper {
+      margin-bottom: 20px;
+    }
+
+    &__img {
+      display: block;
+      width: 90px;
+      margin: 0 auto;
+      margin-bottom: 20px;
+    }
+
+    &__svg {
+      display: block;
+      width: 30px;
+      height: 30px;
+      margin: 0 auto;
+    }
+
+    &__name {
+      font-weight: 800;
+      font-size: 14px;
+      text-align: center;
+      color: $accent-color;
+      margin-bottom: 10px;
+      letter-spacing: 0.08em;
+    }
+
+    &__info {
+      font-weight: 500;
+      font-size: 12px;
+      color: $text-color;
+      letter-spacing: 0.08em;
+      line-height: 15px;
+      text-align: center;
       margin-bottom: 10px;
     }
-  }
 
-  .info {
-    font-family: $main-font;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: $text-color;
-    padding: 0 20px;
-    margin-bottom: 10px;
-
-    @media screen and (min-width: $tablet) {
-      text-align: start;
-      padding: 0;
-      width: 412px;
-
-      @media screen and (min-width: $desktop) {
-        font-size: 14px;
-        line-height: 17px;
-        width: 438px;
-        margin-bottom: 20px;
-      }
-    }
-  }
-
-  .slide-text {
-    font-family: $main-font;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    text-align: center;
-    padding: 0 20px;
-
-    @media screen and (min-width: $tablet) {
-      text-align: start;
-      padding: 0;
-      width: 412px;
+    &__text {
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 20px;
+      text-align: center;
     }
 
-    @media screen and (min-width: $desktop) {
-      font-size: 18px;
-      line-height: 28px;
-      width: 706px;
+    &__link {
+      color: $accent-color;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 20px;
     }
   }
+}
 
-  .slide-text a {
-    color: $accent-color;
-  }
+@media screen and (min-width: $tablet) {
+}
+
+@media screen and (min-width: $desktop) {
 }
