подготовил разметку модального окна

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -26,8 +26,8 @@
 .modal__close-btn {
   display: inline-flex;
   position: absolute;
-  right: 8px;
-  top: 8px;
+  right: 10px;
+  top: 10px;
   width: 30px;
   height: 30px;
   justify-content: center;
@@ -36,14 +36,19 @@
   cursor: pointer;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--main-white-color);
+  background-color: transparent;
 
   &:hover,
   &:focus {
-    color: var(--text-color-title);
-    background-color: var(--background-btn);
+    color: var(white);
+    background-color: var(--text-color-accent);
   }
 }
 .modal__icon-close {
-  fill: var(--text-color-title);
+  fill: var(--main-black-color);
+
+  &:hover,
+  &:focus {
+    fill: var(--main-white-color);
+  }
 }
