header-lib markup

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -102,7 +102,7 @@
   width: 100%;
   @include Roboto(16, 14);
   @media screen and (min-width: 768px) {
-  width: 336px;
+    width: 336px;
   }
   background-color: transparent;
   border: transparent;
@@ -126,6 +126,10 @@
   @media screen and (min-width: 768px) {
     right: 142px;
   }
+  @media screen and (min-width: 1024px) {
+    right: 275px;
+  }
+
   @media screen and (min-width: 1200px) {
     right: 273px;
   }
@@ -137,7 +141,7 @@
   color: var(--main-white-color);
 }
 
-.search-icon{
+.search-icon {
   margin-right: 0px;
   margin-left: 10px;
   margin-top: 5px;
