--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header container">
-      <nav class="navigation">
+<header class="header ">
+  <div class="container"><nav class="navigation">
         <a class="logo logo__common" >
           <svg class="logo__icon" width="24" height="24">
             <use href="../src/sprite/symbol-defs.svg#film"></use>
@@ -35,7 +35,8 @@
                 <use href = "../src/sprite/symbol-defs.svg#search">
             </svg>
         </button>
-      </form>
+      </form></div>
+      
 </header>
 
 
