--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
-<header class="header ">
+<div class="header-js">
+  <header class="header">
   <div class="container"><nav class="navigation">
         <a class="logo logo__common" >
           <svg class="logo__icon" width="24" height="24">
@@ -38,5 +39,6 @@
         </button>
           </form></div>
 </header>
+</div>
 
 
