--- a/src/templates/header-lib.hbs
+++ b/src/templates/header-lib.hbs
@@ -26,3 +26,4 @@
                     <button type="button" class="storage-button__queue button-white common-btn" id='queue'>Queue</button>
                 </li>
             </ul>
+</header>
