--- a/src/templates/header-lib.hbs
+++ b/src/templates/header-lib.hbs
@@ -1,7 +1,7 @@
 <header class="header-bg-lib ">
     <div class="container">
         <nav class="navigation">
-            <a class="logo logo__common">
+            <a class="logo logo__common" href="/">
                 <svg class="logo__icon" width="24" height="24">
                     <use href="../src/sprite/symbol-defs.svg#film"></use>
                 </svg>
