--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <div class="header-js">
   <header class="header">
   <div class="container"><nav class="navigation">
-        <a class="logo logo__common" >
+        <a class="logo logo__common" href="/">
           <svg class="logo__icon" width="24" height="24">
             <use href="../src/sprite/symbol-defs.svg#film"></use>
           </svg>
