исправил btn-close css

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -48,10 +48,13 @@ div.modal {
 }
 
 .modal-card__data {
-  @include Roboto ($lh:16, $fs:12, $fw:500);@include Roboto ($lh:16, $fs:12, $fw:500);
+  @include Roboto ($lh:16, $fs:12, $fw:500);
   text-transform: uppercase;
   color: var(--main-black-color);
   margin-top: 10px;
+}
+.modal-card__data:first-child{
+    @include Roboto ($lh:14, $fs:12, $fw:500);
 }
 .modal-card__item:last-child {
     display: flex;
@@ -62,9 +65,6 @@ div.modal {
     @include Roboto ($lh:16, $fs:12, $fw:500);
     color: var(--main-black-color);
     
-}
-.cardItem__genre-data:not(:last-child) {
-    margin-right: 10px;
 }
 
 .button-white--modal {
@@ -78,12 +78,12 @@ div.modal {
 }
 
 .modal-card__data--vote {
-    @include Roboto ($lh:14, $fs:12, $fw:500);
-    display: inline-block;
+    @include Roboto ($lh:16, $fs:12, $fw:500);
     display: inline-block;
     text-align: center;
     width: 36px;
-    height: 16px; 
+    height: 16px;
+    padding-top: 1.25px; 
     background: var(--background-accent);
     color: var(--main-white-color);
     border-radius: 5px;
