--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -37,18 +37,17 @@
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
+  background-image:url(../images/icons/close.svg);
+  background-size: 14px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-x: center;
 
   &:hover,
   &:focus {
-    color: var(white);
-    background-color: var(--text-color-accent);
+    border: 2px solid var(--background-accent);
+    transform: scale(1.1);
+    background-image: url(../images/icons/close-hover.svg);
   }
 }
-.modal__icon-close {
-  fill: var(--main-black-color);
 
-  &:hover,
-  &:focus {
-    fill: var(--main-white-color);
-  }
-}
