--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -1,8 +1,4 @@
-<button type='button' class='modal__close-btn'>
-  <svg class='modal__icon-close' width='14px' height='14px'>
-    <use href='../images/icons/sprite.svg##close'></use>
-  </svg>
-</button>
+<button type='button' class='modal__close-btn'></button>
 <img
   class='modal-card__img'
   src='https://image.tmdb.org/t/p/w500{{poster_path}}'
