--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -6,7 +6,14 @@
 .pagination_list{
     display: flex;
 }
+
+.next__btn{
+    list-style: none;
+}
+
 .pagination_list li{
+    margin-left: 1px;
+    margin-right: 1px;
     line-height: 40px;
     text-align:center;
     cursor: pointer;
@@ -25,9 +32,11 @@
 
     &:focus,
     &:hover{
-        background: #FF6B08;
+        border-style: solid;
+        border-width: 1px;
+        border-color: #FF6B08;
         border-radius: 5px;
-        color: #FFFFFF;
+     
     }
     
 }
@@ -38,5 +47,4 @@
     background: #F7F7F7;
     border-radius: 5px;
 }
-
 
