--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<div class="header-js">
+<div class="header-js bg-header">
   <header class="header">
   <div class="container"><nav class="navigation">
         <a class="logo logo__common" href="/">
