--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,3 +1,6 @@
+.bg-header {
+  background-color: var(--main-black-color);
+}
 .header {
   background-color: var(--main-black-color);
   margin-left: auto;
