--- a/src/sass/layout/_header-lib.scss
+++ b/src/sass/layout/_header-lib.scss
@@ -1,5 +1,6 @@
 .header-bg-lib {
-  background-color: var(--main-black-color);
+  background-color: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56));
+
   margin-left: auto;
   margin-right: auto;
 
