--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -7,9 +7,6 @@
     display: flex;
 }
 
-.next__btn{
-    list-style: none;
-}
 
 .pagination_list li{
     margin-left: 1px;
@@ -42,6 +39,12 @@
 }
 
 .btn_pgn{
+    &:focus,
+    &:hover{
+        border-style: solid;
+        border-width: 1px;
+        border-color: #F7F7F7;
+    }
     height: 40px;
     width: 40px;
     background: #F7F7F7;
