--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import './components/toggle';
 @import './components/modal-content';
 @import './components/modal';
+@import './components/delete';
 
 // import from folder layout
 @import './layout/footer';
