--- a/src/templates/watchedAndQueueTpl.hbs
+++ b/src/templates/watchedAndQueueTpl.hbs
@@ -1,6 +1,9 @@
 {{#each this}}
-  <li class='item'>
+  <li class='item' id='item-dt'>
     <a class='link' href='#'>
+      <button type='button' class='delete-btn'>
+        X
+      </button>
       <div class='video-card'>
         <img
           class='gallery__video'
