--- a/src/sass/components/_delete.scss
+++ b/src/sass/components/_delete.scss
@@ -10,12 +10,17 @@
   padding: 0;
   cursor: pointer;
   border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   background-color: transparent;
+  background-image: url(../images/icons/close.svg);
+  background-size: 10px;
+  background-position: center;
+  background-repeat: no-repeat;
 
   &:hover,
   &:focus {
-    color: var(white);
-    background-color: var(--text-color-accent);
+    border: 1px solid var(--background-accent);
+    transform: scale(1.1);
+    background-image: url(../images/icons/close-hover.svg);
   }
 }
