--- a/src/templates/watchedAndQueueTpl.hbs
+++ b/src/templates/watchedAndQueueTpl.hbs
@@ -1,9 +1,7 @@
 {{#each this}}
   <li class='item' id='item-dt'>
     <a class='link' href='#'>
-      <button type='button' class='delete-btn'>
-        X
-      </button>
+      <button type='button' class='delete-btn'></button>
       <div class='video-card'>
         <img
           class='gallery__video'
