--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -13,6 +13,7 @@
 }
 
 .item {
+  position: relative;
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 20px;
