--- a/src/sass/layout/_header-lib.scss
+++ b/src/sass/layout/_header-lib.scss
@@ -1,4 +1,5 @@
 .header-bg-lib {
+  position: relative;
   background-color: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56));
 
   margin-left: auto;
@@ -8,7 +9,7 @@
     url(../images/mylib-img-mob@1x.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/mylib-img-mob@2x.jpg);
@@ -16,13 +17,17 @@
   @media screen and (min-width: 768px) {
     max-width: 1199px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/mylib-img-tab@1x.jpg);
+      url(../images/mylib-img-dt@1x.jpg);
   }
   @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
     screen and (min-width: 768px) and (min-resolution: 192dpi),
     screen and (min-width: 768px) and (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/mylib-img-tab@2x.jpg);
+  }
+  @media screen and (min-width: 1199px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/mylib-img-dt@1x.jpg);
   }
   @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
     screen and (min-width: 1200px) and (min-resolution: 192dpi),
@@ -37,6 +42,10 @@
       url(../images/mylib-img-dt@3x.jpg);
   }
 }
+.header-bg-lib > .container {
+  padding-top: 40px;
+  padding-bottom: 65px;
+}
 // buttons
 .storage-button {
   display: flex;
@@ -49,15 +58,5 @@
 .storage-button__item:first-child {
   @media screen and (min-width: 768px) {
     margin-right: 15px;
-  }
-}
-.common-btn {
-  padding-top: 14px;
-  padding-bottom: 12px;
-
-  min-width: 130px;
-
-  @media screen and (min-width: 768px) {
-    min-width: 136px;
   }
 }
