--- a/src/templates/header-lib.hbs
+++ b/src/templates/header-lib.hbs
@@ -1,4 +1,4 @@
-<header class="header-bg-lib ">
+<header class="header-bg-lib">
     <div class="container">
         <nav class="navigation">
             <a class="logo logo__common" href="/">
@@ -16,7 +16,7 @@
                         Library</a></li>
             </ul>
         </nav>
-        <input class="l" class="theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
+        <input class="l theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
             aria-label="Переключить между тёмной и светлой темой" />
             <ul class="storage-button">
                 <li class="storage-button__item">
