--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,25 +1,12 @@
-{{#each this}}
+{{!-- {{#each this}}
   <li class='item' id='item-dt'>
     <a class='link' href='#'>
       <div class='video-card'>
-        {{!-- <img
+        <img
           class='gallery__video'
           src='https://image.tmdb.org/t/p/w300/{{poster_path}}'
           data-source='{{id}}'
-        /> --}}
-  {{#if poster_path}} 
-      <img 
-      class='gallery__video'
-          src='https://image.tmdb.org/t/p/w300/{{poster_path}}'
-          data-source='{{id}}'
         />
-  {{else}}
-      <img 
-      class='gallery__video'
-          src='https://bookslibs.info/assets/general/images/no_poster.jpg'
-          data-source='{{id}}'
-        />
-  {{/if}}
         <span class='video-rating'></span>
       </div>
       <h2 class='video-title' id='video-title-dt'>{{original_title}} </h2>
@@ -29,4 +16,27 @@
       </div>
     </a>
   </li>
+{{/each}} --}}
+
+{{#each this}}
+<li class='item' id='item-dt'>
+  <a class='link' href='#'>
+    <div class='video-card'>
+      {{#if poster_path}}
+      <img class='gallery__video' src='https://image.tmdb.org/t/p/w300/{{poster_path}}' data-source='{{id}}'/>
+      {{else}}
+      <img class='gallery__video' src='https://bookslibs.info/assets/general/images/no_poster.jpg' data-source='{{id}}' />
+      {{/if}}
+      <span class='video-rating'></span>
+    </div>
+    <h2 class='video-title' id='video-title-dt'>{{original_title}} </h2>
+    <div>
+      {{#if genres}}
+      <span class='video__details'>{{genres}} | {{release_date}}</span>
+      <span class='video__vote'>{{vote_average}}</span>
+    </div>
+    </div>
+  </a>
+</li>
+{{/if}}
 {{/each}}
