--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <div class="header-js bg-header">
-  <header class="header">
+  <header class="header check-header">
   <div class="container">
     <nav class="navigation">
         <a class="logo logo__common" href="/">
