--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
 }
 
 .header {
@@ -54,7 +54,7 @@
 }
 
 .header > .container {
-  padding-top: 40px;
+  padding-top: 41px;
   padding-bottom: 89px;
 }
 
@@ -114,6 +114,7 @@
 .search-form {
   position: relative;
   text-align: center;
+  height: 20px;
 }
 .search-input {
   width: 100%;
