--- a/src/templates/header-lib.hbs
+++ b/src/templates/header-lib.hbs
@@ -1,29 +1,16 @@
-<header class="header-bg-lib">
-    <div class="container">
-        <nav class="navigation">
-            <a class="logo logo__common" href="/">
-                <svg class="logo__icon" width="24" height="24">
-                    <use href="../src/sprite/symbol-defs.svg#film"></use>
-                </svg>
-                <span class="logo__name">Filmoteka</span>
-            </a>
-            <ul class="site-nav">
-                <li class="site-nav__item">
-                    <a href="" class="site-nav__link  home link">
-                        Home</a>
-                </li>
-                <li class="site-nav__item"> <a href="" class="site-nav__link site-nav__link--current-page library link">
-                        Library</a></li>
-            </ul>
-        </nav>
-        <input class="l theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
-            aria-label="Переключить между тёмной и светлой темой" />
-            <ul class="storage-button">
-                <li class="storage-button__item">
-                    <button type="button" class="storage-button__watched button-orange common-btn" id='watched'>Watched</button>
-                </li>
-                <li class="storage-button__item">
-                    <button type="button" class="storage-button__queue button-white common-btn" id='queue'>Queue</button>
-                </li>
-            </ul>
-</header>
+<ul class='storage-button'>
+  <li class='storage-button__item'>
+    <button
+      type='button'
+      class='storage-button__watched button-orange common-btn'
+      id='watched'
+    >Watched</button>
+  </li>
+  <li class='storage-button__item'>
+    <button
+      type='button'
+      class='storage-button__queue button-white common-btn'
+      id='queue'
+    >Queue</button>
+  </li>
+</ul>
