--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <nav class="navigation">
         <a class="logo logo__common" href="/">
           <svg class="logo__icon" width="24" height="24">
-            <use href="../src/sprite/symbol-defs.svg#film"></use>
+            <use href="./images/icons/sprite.svg#film"></use>
           </svg>
           <span class="logo__name">Filmoteka</span>
         </a>
@@ -34,7 +34,7 @@
         />
         <button type="submit" class="search-button">
             <svg class="search-icon" width='12'height="12">
-                <use href = "../src/sprite/symbol-defs.svg#search">
+                <use href = "./images/icons/sprite.svg#search">
             </svg>
         </button>
       </form>
