--- a/src/sass/layout/_team-modal.scss
+++ b/src/sass/layout/_team-modal.scss
@@ -8,6 +8,7 @@
   height: 100%;
   flex-wrap: wrap;
   display: flex;
+  justify-content: center;
   list-style: none;
   margin-left: -30px;
   margin-top: -30px;
