adds final loader

--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -5,7 +5,9 @@
         <img
           class='gallery__video'
           src='https://image.tmdb.org/t/p/w300/{{poster_path}}'
-          data-source='{{id}}'
+          data-source='{{id}}',
+          onload="loader.onCardLoaded()",
+          onerror="loader.onCardLoaded()",
         />
         <span class='video-rating'></span>
       </div>
