--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,11 +1,12 @@
 .loader {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   width: 100px;
   height: 100px;
   background-image: url(../../src/images/icons/loader.gif);
   background-size: cover;
+  z-index: 10000;
 }
 
 .visually-hidden {
