--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,13 +16,10 @@
               Library</a></li>
         </ul>
       </nav>
-      <input
-  class="l theme-switch__toggle"
-  type="checkbox"
-  name="theme"
-  id="theme-switch-toggle"
-  aria-label="Переключить между тёмной и светлой темой"
-/>
+<div class="toggle toggle--daynight">
+    <input type="checkbox" id="toggle--daynight" class="toggle--checkbox theme-switch__toggle">
+    <label class="toggle--btn" for="toggle--daynight"><span class="toggle--feature"></span></label>
+</div>
 <div class="buttons-js">
       <form class="search-form" id="search-form">
         <input
