--- a/src/sass/components/_toggle.scss
+++ b/src/sass/components/_toggle.scss
@@ -1,69 +1,164 @@
-.l {
+.toggle {
+  display: block;
+  text-align: center;
+  user-select: none;
   position: absolute;
   top: 10px;
   right: 100px;
-  // font-size: 2em;
-  // line-height: 1.5;
-  background-color: rgb(92 89 88 / 69%);
-  border-radius: 0.75em;
-  box-shadow: 0.1em 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.25) inset;
-  color: #ffee57;
-  display: inline-flex;
-  align-items: center;
-  margin: auto;
-  padding: 0.15em;
-  width: 3em;
-  height: 1.5em;
-  transition: background-color 0.1s 0.3s ease-out, box-shadow 0.1s 0.3s ease-out;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
 }
-.l:before,
-.l:after {
+.toggle--checkbox {
+  display: none;
+}
+.toggle--btn {
+  display: block;
+  margin: 0 auto;
+  font-size: 24px;
+  transition: all 350ms ease-in;
+}
+.toggle--btn:hover {
+  cursor: pointer;
+}
+.toggle--btn,
+.toggle--btn:before,
+.toggle--btn:after,
+.toggle--checkbox,
+.toggle--checkbox:before,
+.toggle--checkbox:after,
+.toggle--feature,
+.toggle--feature:before,
+.toggle--feature:after {
+  transition: all 250ms ease-in;
+}
+.toggle--btn:before,
+.toggle--btn:after,
+.toggle--checkbox:before,
+.toggle--checkbox:after,
+.toggle--feature:before,
+.toggle--feature:after {
   content: '';
   display: block;
 }
-.l:before {
-  background-color: #c7c2c2;
+.toggle--daynight .toggle--btn,
+.toggle--like .toggle--btn {
+  position: relative;
+  height: 20px;
+  width: 40px;
+  border-radius: 70px;
+}
+.toggle--daynight .toggle--btn:before,
+.toggle--like .toggle--btn:before {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 17px;
+  height: 17px;
   border-radius: 50%;
-  width: 1.2em;
-  height: 1.2em;
-  box-shadow: 0.1em 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.2) inset;
-  transition: background-color 0.1s 0.3s ease-out, transform 0.3s ease-out;
-  z-index: 1;
 }
-.l:after {
-  background: linear-gradient(transparent 50%, rgba(0, 0, 0, 0.15) 0) 0 50% / 50% 100%,
-    repeating-linear-gradient(90deg, #bbb 0, #bbb, #bbb 20%, #999 20%, #999 40%) 0 50% / 50% 100%,
-    radial-gradient(circle at 50% 50%, #888 25%, transparent 26%);
-  background-repeat: no-repeat;
-  border: 0.25em solid transparent;
-  border-left: 0.4em solid #d8d8d8;
-  border-right: 0 solid transparent;
-  transition: border-left-color 0.1s 0.3s ease-out, transform 0.3s ease-out;
-  transform: translateX(-22.5%);
-  transform-origin: 25% 50%;
-  width: 1.2em;
-  height: 1em;
+.toggle--daynight .toggle--btn {
+  border: 1.5px solid #1c1c1c;
+  background-color: #3c4145;
 }
-/* Checked */
-.l:checked {
-  background-color: rgb(127 122 122 / 45%);
-  -webkit-box-shadow: 0px 2px 17px 0px rgb(252 252 252 / 29%);
-  -moz-box-shadow: 0px 2px 17px 0px rgb(252 252 252 / 29%);
-  box-shadow: 0px 2px 17px 0px rgb(252 252 252 / 29%);
+.toggle--daynight .toggle--btn:before {
+  background-color: #fff;
+  border: 1.5px solid #e3e3c7;
 }
-
-.l:checked:before {
-  background-color: currentColor;
-  box-shadow: 0.1em 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.25) inset;
-  transform: translateX(125%);
+.toggle--daynight .toggle--btn:after {
+  position: absolute;
+  top: 70%;
+  left: 18px;
+  z-index: 10;
+  width: 2.8px;
+  height: 2.8px;
+  opacity: 0;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: #fff 0 0, #fff 0.75px 0, #fff 1.5px 0, #fff 2.25px 0, #fff 2.75px 0, #fff 3.5px 0,
+    #fff 4px 0, #fff 5.25px -0.25px 0 0.25px, #fff 4px -1.75px 0 -0.25px,
+    #fff 1.75px -1.75px 0 0.25px, #d3d3d3 0 0 0 1px, #d3d3d3 1.5px 0 0 1px, #d3d3d3 2.75px 0 0 1px,
+    #d3d3d3 4px 0 0 1px, #d3d3d3 5.25px -0.25px 0 1.25px, #d3d3d3 4px -1.75px 0 0.25px,
+    #d3d3d3 1.75px -1.75px 0 1.25px;
+  transition: opacity 100ms ease-in;
 }
-.l:checked:after {
-  border-left-color: currentColor;
-  transform: translateX(-2.5%) rotateY(180deg);
+@keyframes starry_star {
+  50% {
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: #fff 7.5px -0.75px 0 0, #fff 3px 2.5px 0 -0.25px,
+      rgba(255, 255, 255, 0.1) 9.5px 4.5px 0 0.25px, #fff 8px 8.5px 0 0,
+      rgba(255, 255, 255, 0.1) 5px 6px 0 -0.375px, #fff 1.25px 9.5px 0 0.25px;
+  }
 }
-.l:focus {
-  outline: 0;
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3);
+  }
+  50% {
+    opacity: 100;
+    transform: scale(1.1);
+  }
+  55% {
+    transform: scale(1.1);
+  }
+  75% {
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 100;
+    transform: scale(1);
+  }
+}
+.toggle--daynight .toggle--feature {
+  display: block;
+  position: absolute;
+  top: 2.5px;
+  left: 54%;
+  z-index: 20;
+  width: 1px;
+  height: 1px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: rgba(255, 255, 255, 0.1) 7.5px -0.75px 0 0,
+    rgba(255, 255, 255, 0.1) 3px 2.5px 0 -0.25px, #fff 9.5px 4.5px 0 0.25px,
+    rgba(255, 255, 255, 0.1) 8px 8.5px 0 0, #fff 5px 6px 0 -0.375px,
+    rgba(255, 255, 255, 0.1) 1.25px 9.5px 0 0.25px;
+  animation: starry_star 5s ease-in-out infinite;
+}
+.toggle--daynight .toggle--feature:before {
+  position: absolute;
+  left: -9px;
+  width: 4.5px;
+  height: 4.5px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1.5px solid #e3e3c7;
+  box-shadow: #e3e3c7 -7px 0 0 -0.75px, #e3e3c7 -2px 6px 0 -0.5px;
+  transform-origin: -6px 130%;
+}
+.toggle--daynight .toggle--checkbox:checked + .toggle--btn {
+  background-color: #9ee3fb;
+  border: 1.5px solid #86c3d7;
+}
+.toggle--daynight .toggle--checkbox:checked + .toggle--btn:before {
+  left: 20px;
+  background-color: #ffdf6d;
+  border: 1.5px solid #e1c348;
+}
+.toggle--daynight .toggle--checkbox:checked + .toggle--btn:after {
+  opacity: 100;
+  animation-name: bounceIn;
+  animation-duration: 0.6s;
+  animation-delay: 0.1s;
+  animation-fill-mode: backwards;
+  animation-timing-function: ease-in-out;
+}
+.toggle--daynight .toggle--checkbox:checked + .toggle--btn > .toggle--feature {
+  opacity: 0;
+  box-shadow: rgba(255, 255, 255, 0.1) 30px -3px 0 -4px, rgba(255, 255, 255, 0.1) 12px 10px 0 -5px,
+    #fff 38px 18px 0 -3px, rgba(255, 255, 255, 0.1) 32px 34px 0 -4px, #fff 20px 24px 0 -5.5px,
+    rgba(255, 255, 255, 0.1) 5px 38px 0 -3px;
+  animation: none;
+}
+.toggle--daynight .toggle--checkbox:checked + .toggle--btn > .toggle--feature:before {
+  left: 25px;
+  transform: rotate(70deg);
 }
