добавила классы active

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -57,6 +57,7 @@
 
 .button-active {
   @extend %button;
+  pointer-events: none;
   -webkit-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
   -moz-box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
   box-shadow: 0px 8px 43px 0px rgba(255, 107, 1, 0.6);
