--- a/src/templates/header-lib.hbs
+++ b/src/templates/header-lib.hbs
@@ -2,7 +2,7 @@
   <li class='storage-button__item'>
     <button
       type='button'
-      class='storage-button__watched button-orange common-btn'
+      class='storage-button__watched button-orange common-btn button-active'
       id='watched'
     >Watched</button>
   </li>
