adds delete feature from watched/queue lists

--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -4,6 +4,7 @@
   top: 50%;
   width: 100px;
   height: 100px;
+  transform: translate(-50%, -50%);
   background-image: url(../../src/images/icons/loader.gif);
   background-size: cover;
   z-index: 10000;
