--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -35,16 +35,16 @@
   padding: 0;
   cursor: pointer;
   border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid transparent;
   background-color: transparent;
   background-image: url(../images/icons/close.svg);
-  background-size: 10px;
+  background-size: 14px;
   background-position: center;
   background-repeat: no-repeat;
 
   &:hover,
   &:focus {
-    border: 1px solid var(--background-accent);
+    // border: 1px solid var(--background-accent);
     transform: scale(1.1);
     background-image: url(../images/icons/close-hover.svg);
   }
