--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,53 +1,52 @@
-.pagination{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.pagination_list{
-    display: flex;
+.pagination_list {
+  display: flex;
+  &--library {
+    display: none;
+  }
 }
 
-
-.pagination_list li{
-    margin-left: 1px;
-    margin-right: 1px;
-    line-height: 40px;
-    text-align:center;
-    cursor: pointer;
-    transition: all 0,8s ease;
+.pagination_list li {
+  margin-left: 1px;
+  margin-right: 1px;
+  line-height: 40px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0, 8s ease;
 }
-.pagination ul li.active{
-    background: #FF6B08;
+.pagination ul li.active {
+  background: #ff6b08;
+  border-radius: 5px;
+  color: #ffffff;
+}
+
+.numb {
+  @include Roboto(16, 12, 500);
+  height: 40px;
+  width: 40px;
+
+  &:focus,
+  &:hover {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ff6b08;
     border-radius: 5px;
-    color: #FFFFFF;
+  }
 }
 
-.numb{
-    @include Roboto (16, 12, 500);
-    height: 40px;
-    width: 40px;
-
-    &:focus,
-    &:hover{
-        border-style: solid;
-        border-width: 1px;
-        border-color: #FF6B08;
-        border-radius: 5px;
-     
-    }
-    
+.btn_pgn {
+  &:focus,
+  &:hover {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #f7f7f7;
+  }
+  height: 40px;
+  width: 40px;
+  background: #f7f7f7;
+  border-radius: 5px;
 }
-
-.btn_pgn{
-    &:focus,
-    &:hover{
-        border-style: solid;
-        border-width: 1px;
-        border-color: #F7F7F7;
-    }
-    height: 40px;
-    width: 40px;
-    background: #F7F7F7;
-    border-radius: 5px;
-}
-
