Изменения вида кнопок+текста+функций

--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -26,10 +26,12 @@
     {{/if}}    
   </ul>
   <div class='modal-card__btn'>
-    <button type='button' class='button-white button-white--modal watchedBtn-js'>add to Watched</button>
-    <button type='button' class='button-white button-white--modal queueBtn-js'>add to queue</button>
+    <button type='button' class='button-white watchedBtn-js'>add to Watched</button>
+    <button type='button' class='button-white queueBtn-js'>add to queue</button>
   </div>
 </div>
+
+
 
 
 
