--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -11,13 +11,18 @@
 }
 
 .pagination_list li {
-  margin-left: 1px;
-  margin-right: 1px;
   line-height: 40px;
   text-align: center;
   cursor: pointer;
   transition: all 0, 8s ease;
 }
+.pagination_item:not(:first-child) {
+  margin-left: 1.5px;
+}
+.pagination_item:not(:last-child) {
+  margin-right: 1.5px;
+}
+
 .pagination ul li.active {
   background: #ff6b08;
   border-radius: 5px;
@@ -28,7 +33,7 @@
   @include Roboto(16, 12, 500);
   height: 40px;
   width: 40px;
-
+  border-radius: 4px;
   &:focus,
   &:hover {
     border-style: solid;
@@ -50,3 +55,17 @@
   background: #f7f7f7;
   border-radius: 5px;
 }
+
+.dots:focus,
+.dots:hover {
+  cursor: default;
+}
+
+// // для темной темы, подставить через JS
+// .pagination_item {
+//   color: var(--main-white-color);
+//   background-color: #1f1f1f;
+// }
+// .dots {
+//   color: var(--main-white-color);
+// }
