все кроме delete

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -24,6 +24,12 @@
   #video-title-dt {
     color: #fff;
   }
+  .pagination_item{
+    color: #ff6b01
+  }
+  .dots{
+     color: #ff6b01
+  }
 }
 
 // конец
